--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the breathtaking landscapes of Ethiopia with Ethio Hiking Community. Discover hidden trails, ancient cultures, and vibrant cities. Our expert guides ensure unforgettable travel adventures and tours in the heart of Africa. Join us for an immersive hiking experience in Ethiopia's most scenic destinations. Book your travel adventure today!" />
-    <title>Ethio Hiking Community | Explore Ethiopia's Scenic Trails and Culture</title>
+    <title>Ethio Hiking Community | Hiking and Tours</title>
   </head>
   <body>
     <div id="root"></div>
